# cryptocurrency-market-aggregator

./: .env  .gitignore  Cargo.toml
src/: common.rs  currencypairs.rs  domain.rs  handler.rs  main.rs  server.rs
src/bitfinex/: api.rs  mod.rs
src/broadcast_api/: mod.rs  server.rs
src/btcmarkets/: api.rs  mod.rs
src/consumer/: error.rs  exchange.rs  handler.rs  macros.rs  mod.rs
src/poloniex/: mod.rs
