[package]
name = "market-aggregator"
version = "0.1.0"
authors = ["Michael Degano <michael@dega.no>"]

[dependencies]
url = "1.7.1"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
simplelog = "0.5.2"
log = "0.4.3"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
reqwest = "0.8.6"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.ws]
version = "0.7.6"
features = ["ssl"]
